--- a/sample_config.toml
+++ b/sample_config.toml
@@ -11,6 +11,7 @@ noShell = false
 noEditor = false
 noPackages = false
 noMemory = false
+noSwap = true
 noCPU = false
 noRoot = false
 noHome = false
@@ -18,6 +19,7 @@ noHome = false
 [options]
 sep = " ->"
 memoryUnit = "mb"
+swapUnit = "mb"
 diskUnit = "gb"
 paths = ["/usr", "/tmp"]
 pathFull = false
