--- a/sample_config.toml
+++ b/sample_config.toml
@@ -6,6 +6,9 @@ noUptime = false
 noUpSince = false
 noWM = false
 noDE = false
+noGTK2Theme = true
+noGTK2Icons = true
+noGTK2Font = true
 noTerminal = false
 noShell = false
 noEditor = false
