--- a/sample_config.toml
+++ b/sample_config.toml
@@ -9,6 +9,9 @@ noDE = false
 noGTK2Theme = true
 noGTK2Icons = true
 noGTK2Font = true
+noGTK3Theme = true
+noGTK3Icons = true
+noGTK3Font = true
 noTerminal = false
 noShell = false
 noEditor = false
