--- a/sample_config.toml
+++ b/sample_config.toml
@@ -30,6 +30,7 @@ diskUnit = "gb"
 paths = ["/usr", "/tmp"]
 pathFull = false
 shellFull = true
+upSinceFormat = "%A, %d %B %Y at %H:%M:%S %Z"
 noColor = false
 
 [colors]
