add option to print GTK2 and GTK3 cursor theme

--- a/sample_config.toml
+++ b/sample_config.toml
@@ -9,9 +9,11 @@ noDE = false
 noGTK2Theme = true
 noGTK2IconTheme = true
 noGTK2Font = true
+noGTK2CursorTheme = true
 noGTK3Theme = true
 noGTK3IconTheme = true
 noGTK3Font = true
+noGTK3CursorTheme = true
 noTerminal = false
 noShell = false
 noEditor = false
