switched variable names from camelCase to the more readable snake_case for configuration file

--- a/sample_config.toml
+++ b/sample_config.toml
@@ -1,42 +1,42 @@
 [show]
-noOS = false
-noArch = false
-noKernel = false
-noUptime = false
-noUpSince = false
-noWM = false
-noDE = false
-noGTK2Theme = true
-noGTK2IconTheme = true
-noGTK2Font = true
-noGTK2CursorTheme = true
-noGTK3Theme = true
-noGTK3IconTheme = true
-noGTK3Font = true
-noGTK3CursorTheme = true
-noTerminal = false
-noShell = false
-noEditor = false
-noPackages = false
-noMemory = false
-noSwap = true
-noCPU = false
-noRoot = false
-noHome = false
+no_os = false
+no_arch = false
+no_kernel = false
+no_uptime = false
+no_up_since = false
+no_wm = false
+no_de = false
+no_gtk2_theme = true
+no_gtk2_Icon_theme = true
+no_gtk2_font = true
+no_gtk2_cursor_theme = true
+no_gtk3_theme = true
+no_gtk3_icon_theme = true
+no_gtk3_font = true
+no_gtk3_cursor_theme = true
+no_terminal = false
+no_shell = false
+no_editor = false
+no_packages = false
+no_memory = false
+no_swap = true
+no_cpu = false
+no_root = false
+no_home = false
 
 [options]
 sep = " ->"
-memoryUnit = "mb"
-swapUnit = "mb"
-diskUnit = "gb"
+memory_unit = "mb"
+swap_unit = "mb"
+disk_unit = "gb"
 paths = ["/usr", "/tmp"]
-pathFull = false
-shellFull = true
-upSinceFormat = "%A, %d %B %Y at %r %Z"
-noColor = false
+path_full = false
+shell_full = true
+up_since_format = "%A, %d %B %Y at %r %Z"
+no_color = false
 
 [colors]
-nameColor = "150"
-textColor = "white+h"
-sepColor = "191"
-bodyColor = ["cyan+h", "cyan"]
+name_color = "150"
+text_color = "white+h"
+sep_color = "191"
+body_color = ["cyan+h", "cyan"]
